# mp_parser

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  settings.ini
services/: db.py  exceptions.py  parser.py  spreadsheet.py  telegram.py  telegram_bot.py
tests/: test_g_sheets.py  test_parser.py
